src/objects/RSS_Feed_Posts__c.object
<CustomObject>
    <description>Stores the content and other properties of feed posts</description>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <externalId>true</externalId>
        <label>GUID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Publish_Date__c</fullName>
        <label>Publish Date</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSS_Feed__c</fullName>
        <label>RSS Feed</label>
        <referenceTo>RSS_Feed__c</referenceTo>
        <relationshipLabel>Feed Posts</relationshipLabel>
        <relationshipName>RSS_Feed_Posts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>RSS Feed Post</label>
    <language>en_US</language>
    <nameField>
        <displayFormat>RSS FP {0000000}</displayFormat>
        <label>RSS Feed Posts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RSS Feed Posts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>